# aitu-isscv-assignment3

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  billing_test.postman_collection.json  docker-compose.yml  entrypoint.sh  pyproject.toml
ai_assisted_version/: .env.example  .gitignore  AI_USAGE.md  COMPARISON.md  Dockerfile  Makefile  README.md  SECURITY_ANALYSIS.md  docker-compose.yml  entrypoint.sh  pyproject.toml
ai_assisted_version/app/: __init__.py  bootstrap.py  config.py  database.py  main.py  models.py  redis_limit.py  schemas.py  security.py
ai_assisted_version/app/web/: app.js  index.html  styles.css
ai_assisted_version/scripts/: smoke_check.py
alembic/: env.py
app/: main.py
app/api/routes/: auth.py  billing.py  debug.py  tariffs.py
app/core/: config.py  exceptions.py  logging.py
app/db/: init_db.py  session.py
app/dependencies/: auth.py  roles.py
app/models/: invoice.py  tariff.py  user.py
app/repositories/: invoice_repository.py  tariff_repository.py
app/schemas/: auth.py  invoice.py  tariff.py  user.py
app/services/: auth_service.py  billing_service.py  tariff_service.py
manual_version/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
manual_version/alembic/versions/: 3f2534c5d5bf_initial.py
manual_version/app/: main.py
manual_version/app/core/: config.py  logging.py  security.py
task/: P3 Design and implement a minimum viable product (MVP) and perform source code security analysis.docx
tests/: test_assignment5_security.py
typings/jose/: __init__.pyi
(+19 files in other folders)
